load("@rules_cc//cc:defs.bzl", "cc_library")

alias(
    name = "apriltaglib",
    actual = ":static",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "static",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
    ] + [
        "@bzlmodrio-apriltaglib//private/cpp/apriltaglib:static",
    ],
)
